--- a/conf.yaml
+++ b/conf.yaml
@@ -33,34 +33,38 @@ data_preprocessing:
     #   "datasets/LogicBench/LogicBench(Aug)/propositional_logic/disjunctive_syllogism/data.json",
     #   "datasets/LogicBench/LogicBench(Eval)/BQA/propositional_logic/disjunctive_syllogism/data.json",
     # ],
-    hypothetical_syllogism: [
-      "datasets/LogicBench/LogicBench(Aug)/propositional_logic/hypothetical_syllogism/data.json",
-      "datasets/LogicBench/LogicBench(Eval)/BQA/propositional_logic/hypothetical_syllogism/data.json",
-    ],
+    # hypothetical_syllogism: [
+    #   "datasets/LogicBench/LogicBench(Aug)/propositional_logic/hypothetical_syllogism/data.json",
+    #   "datasets/LogicBench/LogicBench(Eval)/BQA/propositional_logic/hypothetical_syllogism/data.json",
+    # ],
     # material_implication: [
     #   "datasets/LogicBench/LogicBench(Aug)/propositional_logic/material_implication/data.json",
     #   "datasets/LogicBench/LogicBench(Eval)/BQA/propositional_logic/material_implication/data.json",
     # ],
+    converted_modus_tollens: [
+      "datasets/converted/modus_tollens/aug.json",
+      "datasets/converted/modus_tollens/eval.json",
+    ],
   }
 
   model_names: [
-    # "EleutherAI/pythia-14m",
-    # "gpt2-small",
-    # "EleutherAI/pythia-410m",
+    "EleutherAI/pythia-14m",
+    "gpt2-small",
+    "EleutherAI/pythia-410m",
     "Qwen/Qwen2.5-0.5B-Instruct",
-    # "Qwen/Qwen2.5-1.5B-Instruct",
-    # "meta-llama/Llama-3.2-1B-Instruct",
-    # "gpt2",
+    "Qwen/Qwen2.5-1.5B-Instruct",
+    "meta-llama/Llama-3.2-1B-Instruct",
+    "gpt2",
   ]
 
   templates: [
-    # "alpaca",
-    # "alpaca",
-    # "alpaca",
+    "alpaca",
+    "alpaca",
+    "alpaca",
     "qwen",
-    # "qwen",
-    # "llama_3",
-    # "alpaca",
+    "qwen",
+    "llama_3",
+    "alpaca",
   ]
 
 
@@ -103,10 +107,10 @@ convert_dataset:
     "datasets/LogicBench/LogicBench(Eval)/BQA/propositional_logic/hypothetical_syllogism/data.json",
   ]
   output_files: [
-    "datasets/LogicBench/LogicBench(Aug)/propositional_logic/hypothetical_syllogism/data.json",
-    "datasets/LogicBench/LogicBench(Eval)/BQA/propositional_logic/hypothetical_syllogism/data.json",
+    "datasets/converted/modus_tollens/aug.json",
+    "datasets/converted/modus_tollens/eval.json",
   ]
   format: [
-    "modus_tollens", # only general and modus_tollens are supported
+    "modus_tollens",
     "modus_tollens",
   ]
