--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
 pyvene
-pytorch
+torch
 auto-circuit
 dash
 dash_cytoscape
 captum
 mplcursors
+transformers
+numpy
+pandas
+matplotlib
+networkx
+plotly
+scikit-learn
+transformer-lens
+PyYAML
+tqdm
